--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 
+<!--
     TunesRemote+ - http://code.google.com/p/tunesremote-plus/
     
     Copyright (C) 2008 Jeffrey Sharkey, http://jsharkey.org/
@@ -24,6 +24,7 @@
     All Rights Reserved.
 -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
+
     <style name="ListText" parent="@android:style/TextAppearance.Medium">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">55dip</item>
@@ -31,11 +32,22 @@
         <item name="android:gravity">center</item>
         <item name="android:ellipsize">end</item>
     </style>
+
     <style name="PagerStrip">
         <item name="android:textColor">#33b5e5</item>
     </style>
-    
+
+    <style name="NotificationText">
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
+    </style>
+
+    <style name="NotificationTitle">
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <color name="highlight">#FF33B5E5</color>
     <color name="highlight_60">#9933B5E5</color>
     <color name="highlight_40">#6633B5E5</color>
+
 </resources>
