Added feature from issue 87 - Now Playing button will now take you to the current selected playlist Preference added for default Now Playing button (playlist or song's album) If Playlist is selected to the button, it will failsafe back to album if no playlist is selected Changed color of currently playing song to blue instead of cyan, because it's too similar to white

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -102,6 +102,15 @@
             android:key="@string/pref_fullscreen"
             android:summary="Hides the status bar while running"
             android:title="Fullscreen" />
+        
+        <ListPreference 
+            android:title="Now Playing Action"
+            android:summary="Action to perform when the Now Playing button is pressed. Playlist defaults to Album if a playlist isn't selected."
+            android:key="@string/pref_nowplayingaction"
+            android:entries="@array/pref_npentries"
+            android:entryValues="@array/pref_npvalues"
+            android:defaultValue="nowplaying"
+            />
     </PreferenceCategory>
 
 </PreferenceScreen>
