--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -28,11 +28,6 @@
     <PreferenceCategory android:title="General Preferences" >
         <CheckBoxPreference
             android:defaultValue="false"
-            android:key="@string/pref_background"
-            android:summary="Keep background service running to speed up launch"
-            android:title="Stay connected in background" />
-        <CheckBoxPreference
-            android:defaultValue="false"
             android:key="@string/pref_notify"
             android:summary="Display a notification in the status bar"
             android:title="Enable notification" />
@@ -105,7 +100,7 @@
         
         <ListPreference 
             android:title="Now Playing Action"
-            android:summary="Action to perform when the Now Playing button is pressed. Playlist defaults to Album if a playlist isn't selected."
+            android:summary="Action to perform when the Now Playing button is pressed"
             android:key="@string/pref_nowplayingaction"
             android:entries="@array/pref_npentries"
             android:entryValues="@array/pref_npvalues"
