--- a/res/menu/act_library_browse.xml
+++ b/res/menu/act_library_browse.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_refreshlib"
-          android:showAsAction="ifRoom"
-          android:icon="@drawable/ic_menu_refresh"
-          android:title="Refresh"/>
+    <item
+        android:id="@+id/menu_refreshlib"
+        android:icon="@drawable/ic_menu_refresh"
+        android:showAsAction="ifRoom"
+        android:title="Refresh"/>
+
 </menu>
